baking, breakfast, candy, and snack pages

--- a/pages/Baking.html
+++ b/pages/Baking.html
@@ -42,23 +42,23 @@
 
             <div class="item-wrapper">
                 <div class="item-card">
-                    <img src="../img/products/Tomato.jpeg" alt="Fresh Tomato on the Vine">
-                    <h4>Fresh Tomato on the Vine</h4>
-                    <p> Bag (1.9 lbs/Bag Est.)</p>
-                    <span class="price">$2.83</span>
+                    <img src="../img/products/cakemix.jpeg" alt="Cake mix">
+                    <h4>Pillsbury Chocolate Cake Mix</h4>
+                    <p> 15.25 oz</p>
+                    <span class="price">$3.96</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="item-card">
-                    <img src="../img/products/strawberries.jpeg" alt="Fresh Strawberries">
-                    <h4>Fresh Strawberries</h4>
-                    <p> 2 lb</p>
-                    <span class="price">$5.27</span>
+                    <img src="../img/products/bakingsoda.webp" alt="baking soda">
+                    <h4>Great Value Baking Soda</h4>
+                    <p>16 oz</p>
+                    <span class="price">$0.97</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="item-card">
-                    <img src="../img/products/orange.jpeg" alt="Orange">
-                    <h4>Orange</h4>
-                    <p> Bag (2 lb)</p>
+                    <img src="../img/products/cookiemix.jpeg" alt="Cookie mix">
+                    <h4>Betty Crocker Cookie Mix</h4>
+                    <p>  Makes (12) 2-inch Cookies</p>
                     <span class="price">$4.28</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
