--- a/pages/Breakfast.html
+++ b/pages/Breakfast.html
@@ -42,24 +42,24 @@
 
             <div class="item-wrapper">
                 <div class="item-card">
-                    <img src="../img/products/Tomato.jpeg" alt="Fresh Tomato on the Vine">
-                    <h4>Fresh Tomato on the Vine</h4>
-                    <p> Bag (1.9 lbs/Bag Est.)</p>
-                    <span class="price">$2.83</span>
+                    <img src="../img/products/cereal-krave.jpeg" alt="Cereal">
+                    <h4>Kellogg's Krave Cereal</h4>
+                    <p> 17.3 oz</p>
+                    <span class="price">$4.98</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="item-card">
-                    <img src="../img/products/strawberries.jpeg" alt="Fresh Strawberries">
-                    <h4>Fresh Strawberries</h4>
-                    <p> 2 lb</p>
-                    <span class="price">$5.27</span>
+                    <img src="../img/products/waffles.webp" alt="Waffles">
+                    <h4>Eggo Homestyle Frozen Waffles</h4>
+                    <p>29.6 oz, 24 ct.</p>
+                    <span class="price">$6.36</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="item-card">
-                    <img src="../img/products/orange.jpeg" alt="Orange">
-                    <h4>Orange</h4>
-                    <p> Bag (2 lb)</p>
-                    <span class="price">$4.28</span>
+                    <img src="../img/products/cereal.jpeg" alt="Cereal">
+                    <h4>Honey Nut Cheerios Cereal,</h4>
+                    <p> 18.8 oz Family Size box</p>
+                    <span class="price">$4.93</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
             </div>
