--- a/pages/Candy.html
+++ b/pages/Candy.html
@@ -42,24 +42,24 @@
 
             <div class="item-wrapper">
                 <div class="item-card">
-                    <img src="../img/products/Tomato.jpeg" alt="Fresh Tomato on the Vine">
-                    <h4>Fresh Tomato on the Vine</h4>
-                    <p> Bag (1.9 lbs/Bag Est.)</p>
-                    <span class="price">$2.83</span>
+                    <img src="../img/products/milkduds.webp" alt="Milk Duds">
+                    <h4>Milk Duds Chocolate Candy</h4>
+                    <p> Box 10oz</p>
+                    <span class="price">$2.57</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="item-card">
-                    <img src="../img/products/strawberries.jpeg" alt="Fresh Strawberries">
-                    <h4>Fresh Strawberries</h4>
-                    <p> 2 lb</p>
-                    <span class="price">$5.27</span>
+                    <img src="../img/products/twix.webp" alt="Twix">
+                    <h4>Twix Caramel Minis Candy</h4>
+                    <p>35.6 oz/95ct</p>
+                    <span class="price">$12.22</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="item-card">
-                    <img src="../img/products/orange.jpeg" alt="Orange">
-                    <h4>Orange</h4>
-                    <p> Bag (2 lb)</p>
-                    <span class="price">$4.28</span>
+                    <img src="../img/products/lindor.webp" alt="Lindor">
+                    <h4>Lindor Assorted Chocolate Truffles</h4>
+                    <p>8.5 oz. Bag</p>
+                    <span class="price">$12.95</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
             </div>
