--- a/pages/Snacks.html
+++ b/pages/Snacks.html
@@ -42,24 +42,24 @@
 
             <div class="item-wrapper">
                 <div class="item-card">
-                    <img src="../img/products/Tomato.jpeg" alt="Fresh Tomato on the Vine">
-                    <h4>Fresh Tomato on the Vine</h4>
-                    <p> Bag (1.9 lbs/Bag Est.)</p>
-                    <span class="price">$2.83</span>
+                    <img src="../img/products/pudding.webp" alt="Pudding">
+                    <h4>Snack Pack Chocolate Pudding</h4>
+                    <p> 3.25 oz, 4 count</p>
+                    <span class="price">$1.27</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="item-card">
-                    <img src="../img/products/strawberries.jpeg" alt="Fresh Strawberries">
-                    <h4>Fresh Strawberries</h4>
-                    <p> 2 lb</p>
-                    <span class="price">$5.27</span>
+                    <img src="../img/products/chips.jpeg" alt="Chips">
+                    <h4>Miss Vickie's Potato Chips,</h4>
+                    <p> Jalapeno, 28 Count</p>
+                    <span class="price">$5.63</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="item-card">
-                    <img src="../img/products/orange.jpeg" alt="Orange">
-                    <h4>Orange</h4>
-                    <p> Bag (2 lb)</p>
-                    <span class="price">$4.28</span>
+                    <img src="../img/products/oreo.webp" alt="Oreos">
+                    <h4>OREO Chocolate Cookies</h4>
+                    <p>Family Size, 19.1 oz</p>
+                    <span class="price">$7.81</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
             </div>
