--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
     </div>
 
     <div class="footer">
-
-
+        <div class="name-info">
+            <p>Aashritha Ananthula, AXA180116</p>
+        </div>
     </div>
 
 </body>
