--- a/pages/Account.html
+++ b/pages/Account.html
@@ -34,7 +34,7 @@
     </div>
     <div class="content-wrap">
         <div class="main">
-            <h3>Account</h3>
+            <h3>Create Account</h3>
             <div class="form-container">
                 <form action="/create_account" method="post">
                     <label for="firstName">First Name</label>
@@ -103,8 +103,9 @@
     </div>
 
     <div class="footer">
-
-
+        <div class="name-info">
+            <p>Aashritha Ananthula, AXA180116</p>
+        </div>
     </div>
 </body>
 
