--- a/pages/Frozen.html
+++ b/pages/Frozen.html
@@ -112,8 +112,9 @@
     </div>
 
     <div class="footer">
-
-
+        <div class="name-info">
+            <p>Aashritha Ananthula, AXA180116</p>
+        </div>
     </div>
 </body>
 
