--- a/pages/Specialty.html
+++ b/pages/Specialty.html
@@ -42,24 +42,24 @@
 
             <div class="item-wrapper">
                 <div class="item-card">
-                    <img src="../img/products/Tomato.jpeg" alt="Fresh Tomato on the Vine">
-                    <h4>Fresh Tomato on the Vine</h4>
-                    <p> Bag (1.9 lbs/Bag Est.)</p>
-                    <span class="price">$2.83</span>
+                    <img src="../img/products/baguette.webp" alt="Baguette">
+                    <h4>Specialty French Bread</h4>
+                    <p> 14 oz</p>
+                    <span class="price">$1.83</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="item-card">
-                    <img src="../img/products/strawberries.jpeg" alt="Fresh Strawberries">
-                    <h4>Fresh Strawberries</h4>
-                    <p> 2 lb</p>
-                    <span class="price">$5.27</span>
+                    <img src="../img/products/cheese.webp" alt="Cheese">
+                    <h4>Emmi Le Gruyère Cheese </h4>
+                    <p> 6 oz</p>
+                    <span class="price">$7.17</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="item-card">
-                    <img src="../img/products/orange.jpeg" alt="Orange">
-                    <h4>Orange</h4>
-                    <p> Bag (2 lb)</p>
-                    <span class="price">$4.28</span>
+                    <img src="../img/products/wine.webp" alt="Wine">
+                    <h4>San Antonio Cardinale Wine</h4>
+                    <p> 750 ML</p>
+                    <span class="price">$14.98</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
             </div>
@@ -114,8 +114,9 @@
     </div>
 
     <div class="footer">
-
-
+        <div class="name-info">
+            <p>Aashritha Ananthula, AXA180116</p>
+        </div>
     </div>
 </body>
 
