--- a/pages/Breakfast.html
+++ b/pages/Breakfast.html
@@ -114,8 +114,9 @@
     </div>
 
     <div class="footer">
-
-
+        <div class="name-info">
+            <p>Aashritha Ananthula, AXA180116</p>
+        </div>
     </div>
 </body>
 
