--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -106,8 +106,9 @@
     </div>
 
     <div class="footer">
-
-
+        <div class="name-info">
+            <p>Aashritha Ananthula, AXA180116</p>
+        </div>
     </div>
 </body>
 
