deals page updated

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <a href="pages/Breakfast.html">Breakfast & Cereal</a>
         <a href="pages/Baking.html">Baking</a>
         <a href="pages/Snacks.html">Snacks</a>
-        <a href="./pages/Candy.html">Candy</a>
-        <a href="./pages/Specialty.html">Specialty Shops</a>
-        <a href="./pages/Deals.html">Deals</a>
+        <a href="pages/Candy.html">Candy</a>
+        <a href="pages/Specialty.html">Specialty Shops</a>
+        <a href="pages/Deals.html">Deals</a>
         <a href="pages/Account.html">My Account</a>
         <a href="pages/About.html">About Us</a>
         <a href="pages/Contact.html">Contact Us</a>
