--- a/pages/About.html
+++ b/pages/About.html
@@ -27,7 +27,7 @@
         <a href="Snacks.html">Snacks</a>
         <a href="Candy.html">Candy</a>
         <a href="Specialty.html">Specialty Shops</a>
-        <a href=#content>Deals</a>
+        <a href="Deals.html">Deals</a>
         <a href="Account.html" >My Account</a>
         <a href="About.html" class="active">About Us</a>
         <a href="Contact.html">Contact Us</a>
