--- a/pages/Candy.html
+++ b/pages/Candy.html
@@ -26,7 +26,7 @@
         <a href="Snacks.html">Snacks</a>
         <a href="Candy.html" class="active">Candy</a>
         <a href="Specialty.html" >Specialty Shops</a>
-        <a href=#content>Deals</a>
+        <a href="Deals.html">Deals</a>
         <a href="Account.html">My Account</a>
         <a href="About.html">About Us</a>
         <a href="Contact.html">Contact Us</a>
