--- a/pages/Specialty.html
+++ b/pages/Specialty.html
@@ -26,7 +26,7 @@
         <a href="Snacks.html">Snacks</a>
         <a href="Candy.html" >Candy</a>
         <a href="Specialty.html" class="active">Specialty Shops</a>
-        <a href=#content>Deals</a>
+        <a href="Deals.html">Deals</a>
         <a href="Account.html">My Account</a>
         <a href="About.html">About Us</a>
         <a href="Contact.html">Contact Us</a>
