--- a/pages/Cart.html
+++ b/pages/Cart.html
@@ -1,6 +1,3 @@
-
-<!-- Aashritha Ananthula, AXA180116, CS 6314 section 1 -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,9 +7,8 @@
     <title>GreenMart</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css" />
     <link rel="stylesheet" type="text/css" href="../css/account.css" />
-    <link rel="stylesheet" type="text/css" href="../css/extras.css" />
     <link rel="stylesheet" type="text/css" href="../css/shopping-cart.css" />
-    <script src="../js/validateForm.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/deals.css" />
     <script src="../js/cart.js"></script>
 </head>
 
@@ -41,47 +37,12 @@
         <a href="Deals.html">Deals</a>
         <a href="Account.html">My Account</a>
         <a href="About.html">About Us</a>
-        <a href="Contact.html" class="active">Contact Us</a>
-        <a href="Cart.html">Cart</a>
+        <a href="Contact.html">Contact Us</a>
+        <a href="Cart.html" class="active">Cart</a>
     </div>
     <div class="content-wrap">
         <div class="main">
-            <h3>Contact Us</h3>
-            <div class="form-container">
-                <form onsubmit="return validateForm()">
-                    <label for="firstName">First Name</label>
-                    <input type="text" id="firstName" name="firstName" required><br>
-
-                    <label for="lastName">Last Name</label>
-                    <input type="text" id="lastName" name="lastName" required><br>
-
-                    <label for="pnumber">Phone Number</label>
-                    <input type="tel" id="pnumber" name="pnumber" required><br>
-
-                    <label for="gender">Gender</label>
-                    <div class="radio-button">
-                        <input type="radio" name="gender" value="male" required>
-                        <label for="male">Male</label>
-
-                        <input type="radio" name="gender" value="female" required>
-                        <label for="female">Female</label>
-
-                        <input type="radio" name="gender" value="other" required>
-                        <label for="other">Other</label>
-                        <br>
-                    </div>
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required><br>
-
-                    <label for="comment">Comment</label>
-                    <input id="comment" name="comment" rows="4" cols="50" required></input><br>
-
-                    <input type="submit" value="Create Account">
-                </form>
-            </div>
-        </div>
-        <div class="side">
-            <h1 id="cart">Shopping Cart</h1>
+            <h3>Cart</h3> 
             <div class="table-container">
                 <table id="shopping-cart-side">
                     <thead>
@@ -98,8 +59,8 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            
-                        </tr> 
+
+                        </tr>
                     </tbody>
                     <tfoot>
                         <tr>
@@ -110,9 +71,11 @@
                 </table>
 
             </div>
+            <button class="cart-buy" onclick="emptyCart()">Empty Cart</button>
 
-            <button class="cart-buy" onclick="window.location.href='Cart.html'">Begin Checkout</button>
-            <button class="cart-buy" onclick="emptyCart()">Empty Cart</button> 
+        </div>
+        <div class="side">
+            
         </div>
     </div>
 
